Closed
Bug 235768
Opened 22 years ago
Closed 22 years ago
mozilla 1.6 and up don't always display fixed background correctly. moz 1.4 was fine
Categories
(Core :: Web Painting, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.7beta
People
(Reporter: jbrown, Assigned: bzbarsky)
References
()
Details
Attachments
(2 files)
|
4.16 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.62 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5) Gecko/20040114 Firebird/0.7
On the page http://emergence.uk.net/about/ - you cannot see the smoke and
railtrails through the main content section with moz 1.6. moz 1.4 is fine.
Reproducible: Always
Steps to Reproduce:
1.go to http://emergence.uk.net/about/
2.look at it
3.feel sad
Actual Results:
i felt more and more sad
Expected Results:
displayed the background image under the text
| Assignee | ||
Comment 1•22 years ago
|
||
The problem here is that fixed-attachment backgrounds should just be placed
relative to the viewport, per CSS2.1, without the "nearest scrolling ancestor"
stuff we do.
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
| Assignee | ||
Comment 4•22 years ago
|
||
Comment on attachment 142393 [details] [diff] [review]
Same as diff -w
roc, what do you think?
Attachment #142393 -
Flags: superreview?(roc)
Attachment #142393 -
Flags: review?(roc)
I think Hixie was planning to change CSS, or something. At least I blame him for
advocating the "nearest scrollframe" behaviour.
Comment on attachment 142393 [details] [diff] [review]
Same as diff -w
This looks like a good patch to make us CSS2.1 compliant.
Attachment #142393 -
Flags: superreview?(roc)
Attachment #142393 -
Flags: superreview+
Attachment #142393 -
Flags: review?(roc)
Attachment #142393 -
Flags: review+
| Assignee | ||
Comment 7•22 years ago
|
||
Heh. Well, the nearest scrollframe changed when we changed the impl of
overflow:hidden....
Taking bug.
Assignee: roc → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P1
Target Milestone: --- → mozilla1.7beta
| Assignee | ||
Comment 8•22 years ago
|
||
Checked in. I also filed bug 235788 on some perf issues I was seeing on that page.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•22 years ago
|
||
Thanks guys!
Comment 10•22 years ago
|
||
(In reply to comment #5)
> I think Hixie was planning to change CSS, or something. At least I blame him
> for advocating the "nearest scrollframe" behaviour.
That rings a bell. Seems I lost the argument in the WG though. :-)
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•