Position fixed backgrounds with respect to the viewport, not "nearest scrollframe or viewport".  Bug 235768, r+sr=roc